--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "02-pokemon-static",
+  "name": "03-pokemon-static",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.8-beta.5",
+    "axios": "^0.26.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
