--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.2-beta.2",
+    "@nextui-org/react": "1.0.2-beta.2",
     "axios": "^0.26.1",
     "canvas-confetti": "^1.5.1",
     "next": "12.1.5",
